# nli-synthetic-dataset-processing

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  main.py  nli-synthetic-data-research-note.md  paper-2402.12368v2-page-notes-vi.md  paper-2605.00116-v1-implementation.md  progress.jsonl  pyproject.toml
.github/workflows/: ci-cd.yml
data/: sample_nli.csv
docs/: delegation-vi.md  generator-explanation-vi.md  progress-tracking-vi.md  project-overview-vi.md
skills/: aggregator.md  delegation.md  execution.md  generator-explanation-vi.md  generator.md  progress_tracking.md
src/: __init__.py  app_config.py  dataset_reader_schema.py  dataset_reader_service.py  dataset_translate_schema.py  main.py  mcp_server.py  openai_translation_service.py  prompt_template.py  routers.py
src/routers/: __init__.py  reader_router.py  skill_router.py  translate_router.py  writer_router.py
src/schemas/: __init__.py  dataset_generate_schema.py  dataset_reader_schema.py  dataset_translate_schema.py  dataset_writer_schema.py
src/services/: __init__.py  dataset_reader_service.py  dataset_writer_service.py  openai_translation_service.py  skill_service.py  translation_service.py
