[project]
name = "nli-synthetic-data-processing"
version = "0.1.0"
description = "Simple synthetic data creation and validation for Vietnamese NLI synthetic data."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.116.0",
    "fastmcp>=2.12.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyarrow>=21.0.0",
    "uvicorn>=0.35.0",
    "rich>=15.0.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py311"]
